--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -80,7 +80,7 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="titlenivel">R07D LEVEL</string>
     <string name="title_activity_niveles">NivelesActivity</string>
-    <string name="puntaje">R07D SCORE</string>
+    <string name="puntaje">TOTAL SCORE</string>
      <string name="puntajem">Score</string>
     <string name="pun">1000</string>
     <string name="hash">#</string>
@@ -193,12 +193,12 @@
     <string name="shrscoresub">SHARING R07D\'S SCORE</string>
     <string name="shrscoretext">This is my #R07D Score, What\'s yours?.. http://bit.ly/1lN7aSl</string>
     <string name="shrnoti">Share with</string>
-    <string name="punp">You\u0027ve made a good effort, keep going! Blessings!</string>
-    <string name="punp2">(R07D Beginner Level)</string>
-    <string name="punm">You\u0027ve done a good work, keep going! Blessings!</string>
-    <string name="punm2">(R07D Intermediate Level)</string>
-    <string name="puna">You\u0027ve done an excellent work, keep going! Blessings!</string>
-    <string name="puna2">(R07D Advanced Level)</string>
+    <string name="punp">You\u0027ve made a good effort this month, keep going! Blessings!</string>
+    <string name="punp2">(Monthly Level: R07D Beginner) Points: </string>
+    <string name="punm">You\u0027ve done a good work this month, keep going! Blessings!</string>
+    <string name="punm2">(Monthly Level: R07D Intermediate) Points: </string>
+    <string name="puna">You\u0027ve done an excellent work this month, keep going! Blessings!</string>
+    <string name="puna2">(Monthly Level: R07D Advanced) Points: </string>
     <string name="widgettit">R07D wdGtm?</string>
     <string name="mtl">Meet the Lord in the Secret&#8230;</string>
     <string name="title_activity_niveles_menu">NivelesMenuActivity</string>
